tests/should_fail/bad_assign_root.nds
-- Assignment target must end in an identifier, not a literal.
set 1 to 2
